--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -15,12 +15,20 @@ dependencies:
     git:
       url: git://github.com/hivedb/hive.git
       path: hive_flutter
+  flutter_bloc: ^6.0.6
+  injectable: ^1.0.5
+  freezed_annotation: ^0.12.0
+  get_it: ^5.0.1
+  dartz: ^0.9.2
   cupertino_icons: ^1.0.0
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
   strict_analyzer: ^0.4.0
+  injectable_generator: ^1.0.5
+  freezed: ^0.12.2
+  build_runner: ^1.10.3
 
 flutter:
   uses-material-design: true
