--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -21,6 +21,8 @@ dependencies:
   get_it: ^5.0.1
   dartz: ^0.9.2
   cupertino_icons: ^1.0.0
+  cached_network_image: ^2.3.3
+  google_fonts: ^1.1.1
 
 dev_dependencies:
   flutter_test:
